--- a/javascript/401k-contribution/package.json
+++ b/javascript/401k-contribution/package.json
@@ -8,7 +8,7 @@
   "license": "ISC",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose"
   },
   "devDependencies": {
     "jest": "^27.3.1"
