add extra flag to test script

--- a/php/401k-contribution/composer.json
+++ b/php/401k-contribution/composer.json
@@ -14,7 +14,7 @@
   ],
   "license": "ISC",
   "scripts": {
-    "test": "phpunit test --verbose"
+    "test": "phpunit test --verbose --testdox"
   },
   "require": {
     "php": ">=7.4.0"
