--- a/javascript/credit-card-rewards/package.json
+++ b/javascript/credit-card-rewards/package.json
@@ -8,8 +8,16 @@
   "license": "ISC",
   "type": "module",
   "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose"
   },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6"
+  },
+  "jest": {
+    "transform": {}
   }
 }
